--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/throttler": "^2.0.1",
-    "csurf": "^1.11.0",
+    "compression": "^1.7.4",
     "helmet": "^5.0.2",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
@@ -40,7 +40,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
-    "@types/csurf": "^1.11.2",
+    "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
     "@types/jest": "27.4.1",
