--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "nodeenv": "^3.0.74"
   },
   "jest": {
     "moduleFileExtensions": [
