Separação dos model da api em uma lib de dominio

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,14 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "userApi/domain": [
+        "libs/domain/src"
+      ],
+      "userApi/domain/*": [
+        "libs/domain/src/*"
+      ]
+    }
   }
 }
